--- a/.github/workflows/uat.yaml
+++ b/.github/workflows/uat.yaml
@@ -16,6 +16,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so yours job can access it
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       
       # Runs a single command using the runners shell
       - name: Install packages
