--- a/.github/workflows/uat.yaml
+++ b/.github/workflows/uat.yaml
@@ -22,7 +22,7 @@ jobs:
         run: pip install --extra-index-url https://test.pypi.org/simple/ boman-cli-uat==15.6.2
         #run: pip install boman-cli==2.4.6
       - name: Run scan  
-        run: boman-cli-uat -a run -u https://qa.boman.ai -config ./boman_qa2.yaml
+        run: boman-cli-uat -a run -u https://qa.boman.ai -config ./boman_qa.yaml
         
         #sudo boman-cli -a run -u https://dashboard.boman.ai/ -at ${{secrets.BOMAN_APP_TOKEN}} -ct ${{secrets.BOMAN_CUSTOMER_TOKEN}}
 
